Revisar Listar y Completar registro usuario

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,18 @@
         android:onClick="onClick"
         android:text="Prueba" />
 
+    <Button
+        android:id="@+id/btnRegistroProducto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Producto" />
+
+    <Button
+        android:id="@+id/btnListarProducto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Listar Producto" />
 
 </LinearLayout>
