Creacion de meto Ingresar Usuario y ancriptacion de password

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:text="Crear BD" />
 
     <Button
-        android:id="@+id/btnRegistroMascota"
+        android:id="@+id/btnRegistroUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
