--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,21 +16,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="Crear BD" />
+        android:text="Resgistrar Cargo" />
 
     <Button
         android:id="@+id/btnRegistroUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="Prueba" />
+        android:text="Registrar Usuarios" />
 
     <Button
         android:id="@+id/btnRegistroProducto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="Producto" />
+        android:text="Registrar Producto" />
 
     <Button
         android:id="@+id/btnListarProducto"
@@ -38,5 +38,12 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="Listar Producto" />
+
+    <Button
+        android:id="@+id/btnActualizar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Actualizar datos usuario" />
 
 </LinearLayout>
