Eliminacion de titulo de layouts, boton flotante con el scanner, ocultacion de boton de mail.

--- a/app/src/main/res/layout/activity_main_scaner.xml
+++ b/app/src/main/res/layout/activity_main_scaner.xml
@@ -17,7 +17,7 @@
         android:id="@+id/textView"
         android:layout_width="390dp"
         android:layout_height="45dp"
-        android:text="TextView" />
+        android:text="Información de Producto:" />
 
     <Button
         android:id="@+id/button"
