--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,16 +21,15 @@
         android:gravity="center"
         android:layout_marginBottom="30dp"
         android:text="BIENVENIDO A INVETN APP V 1.0"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/logoLogin"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_gravity="center"/>
-        <!--android:background="@drawable/icono_easyeconomy1" -->
-
+        android:layout_gravity="center"
+        android:background="@drawable/icon_iv"/>
 
     <EditText
         android:id="@+id/campoNickname"
