--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -48,6 +49,8 @@
 
     <Button
         android:id="@+id/btnScanner"
+        android:enabled="false"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
@@ -55,9 +58,47 @@
 
     <Button
         android:id="@+id/btnMail"
+        android:enabled="false"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="Mail" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/cal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:orientation="vertical">
+
+            <com.github.clans.fab.FloatingActionMenu
+                android:id="@+id/fabPrincipal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom|end"
+                app:menu_fab_label="Menu">
+
+                <com.github.clans.fab.FloatingActionButton
+                    android:id="@+id/fabScanner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:onClick="onClick"
+                    android:src="@drawable/camera_icon"
+                    app:fab_label="Scanner" />
+
+            </com.github.clans.fab.FloatingActionMenu>
+
+
+        </FrameLayout>
+
+    </ScrollView>
 
 </LinearLayout>
