--- a/app/src/main/res/layout/activity_actualizar_datos.xml
+++ b/app/src/main/res/layout/activity_actualizar_datos.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#D8C2FAF5"
     android:orientation="vertical"
     tools:context=".RegistroUsuariosActivity">
 
@@ -75,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="#EEEEEE"
+        android:background="#C9F4F7F8"
         android:textColor="#000000"
         android:onClick="onClick"
         android:text="Actualizar Datos" />
