--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    android:background="#F6FDFF"
+    android:background="#D8C2FAF5"
     android:gravity="center"
     tools:context=".Login">
 
@@ -28,7 +28,8 @@
         android:id="@+id/logoLogin"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:background="@mipmap/ic_launcher" />
         <!--android:background="@drawable/icono_easyeconomy1" -->
 
 
