--- a/app/src/main/res/layout/activity_main_scaner.xml
+++ b/app/src/main/res/layout/activity_main_scaner.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="#D8C2FAF5"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -23,6 +23,7 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#C9F4F7F8"
         android:text="Escanear" />
 
     <ListView
