--- a/app/src/main/res/layout/activity_registro_cargo.xml
+++ b/app/src/main/res/layout/activity_registro_cargo.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="#D8C2FAF5"
     tools:context=".RegistroCargoActivity">
 
     <TextView
@@ -36,6 +37,7 @@
         android:id="@+id/btnRegistro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#C9F4F7F8"
         android:layout_marginTop="30dp"
         android:onClick="onClick"
         android:text="Registrar Cargo" />
