--- a/app/src/main/res/layout/activity_registro_producto.xml
+++ b/app/src/main/res/layout/activity_registro_producto.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="#D8C2FAF5"
     tools:context=".RegistroProductoActivity">
 
     <TextView
@@ -68,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:onClick="onClick"
+        android:background="#C9F4F7F8"
         android:text="Registrar Producto" />
 
 </LinearLayout>
