--- a/app/src/main/res/layout/activity_registro_usuarios.xml
+++ b/app/src/main/res/layout/activity_registro_usuarios.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="#D8C2FAF5"
     tools:context=".RegistroUsuariosActivity">
 
     <TextView
@@ -43,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClickfecha"
+        android:background="#C9F4F7F8"
         android:text="Calendario" />
 
     <EditText
@@ -81,6 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:onClick="onClick"
+        android:background="#C9F4F7F8"
         android:text="Registrar Usuario" />
 
 </LinearLayout>
