--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:onClick="onClick"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:text="Resgistrar Cargo" />
+        android:text="Registrar Cargo" />
 
 
     <Button
@@ -39,7 +39,7 @@
         android:id="@+id/btnRegistroProducto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#C9F4F7F8"
+        android:background="#C9F4F7F8"
         android:onClick="onClick"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
