--- a/app/src/main/res/layout/activity_actualizar_productos.xml
+++ b/app/src/main/res/layout/activity_actualizar_productos.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#D8C2FAF5"
     android:orientation="vertical"
     tools:context=".ActualizarProductos">
 
@@ -28,6 +29,8 @@
             android:id="@+id/btnConsultar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#C9F4F7F8"
+            android:textColor="#000000"
             android:layout_marginLeft="10dp"
             android:text="Buscar"
             android:onClick="onClick"/>
@@ -83,6 +86,10 @@
             android:id="@+id/btnActualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="5dp"
+            android:background="#C9F4F7F8"
+            android:textColor="#000000"
             android:text="Actualizar"
             android:layout_weight="0.5"
             android:onClick="onClick"/>
@@ -91,6 +98,9 @@
             android:id="@+id/btnEliminar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="#C9F4F7F8"
+            android:textColor="#000000"
             android:text="Eliminar"
             android:layout_weight="0.5"
             android:onClick="onClick"/>
