--- a/app/src/main/res/layout/activity_actualizar_productos.xml
+++ b/app/src/main/res/layout/activity_actualizar_productos.xml
@@ -12,6 +12,16 @@
     android:orientation="vertical"
     tools:context=".ActualizarProductos">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ACTUALIZAR DATOS DE PRODUCTO"
+        android:layout_centerHorizontal="true"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
