--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Escanear Codigo" />
+                android:text="Escanear Código" />
 
             <ImageButton
                 android:id="@+id/btnScanner"
