Faltas ortográficas. (nose si por ahí se me fue alguna falta)

--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Registrar producto" />
+                android:text="Registrar Producto" />
 
             <ImageButton
                 android:id="@+id/btnRegistroProducto"
