Correccion de activity actualizar datos usuario Mejora de activity login

--- a/app/src/main/res/layout/activity_actualizar_datos.xml
+++ b/app/src/main/res/layout/activity_actualizar_datos.xml
@@ -51,7 +51,8 @@
         android:id="@+id/campoClave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Clave:" />
+        android:hint="Clave:"
+        android:password="true" />
 
     <EditText
         android:id="@+id/campoTelefono"
