--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="83dp"
         android:gravity="center"
-        android:text="Invent v 1.0"
+        android:text="InventLib v 1.0"
         android:textSize="24sp"
         android:textStyle="bold" />
 
