--- a/app/src/main/res/layout/activity_registro_producto.xml
+++ b/app/src/main/res/layout/activity_registro_producto.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="Escanear codigo" />
+        android:text="Escanear código" />
 
     <EditText
         android:id="@+id/campo_id_nombre_producto"
