--- a/app/src/main/res/layout/activity_actualizar_pais.xml
+++ b/app/src/main/res/layout/activity_actualizar_pais.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_actualizar_productos"
+    android:id="@+id/activity_actualizar_pais"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#D8C2FAF5"
     android:orientation="vertical"
-    tools:context=".ActualizarProductos">
+    tools:context=".ActualizarPais">
 
     <TextView
         android:layout_width="match_parent"
@@ -58,30 +58,7 @@
         android:id="@+id/campoObservacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Cantidad: "/>
-
-    <EditText
-        android:id="@+id/campoCantidadMinima"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Cantidad Mínima:"/>
-
-    <EditText
-        android:id="@+id/campoPrecio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Precio:"/>
-
-    <EditText
-        android:id="@+id/campoDetalleProd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Detalle de Producto:"/>
-
-    <Spinner
-        android:id="@+id/comboCategoriaAP"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:hint="Detalle producto: " />
 
     <LinearLayout
         android:layout_marginTop="30dp"
