--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
                 android:text="Actualiza Datos Usuario" />
 
             <ImageButton
-                android:id="@+id/btnActualizar"
+                android:id="@+id/btnActualizarPais"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
