--- a/app/src/main/res/layout/activity_registro_pais.xml
+++ b/app/src/main/res/layout/activity_registro_pais.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_registro_usuarios"
+    android:id="@+id/activity_registro_pais"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,27 +10,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="#D8C2FAF5"
-    tools:context=".RegistroCargoActivity">
+    tools:context=".RegistroPais">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:text="REGISTRO DE CARGO"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="30dp"/>
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/campoNombrePais"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nombre del cargo:" />
+        android:hint="Nombre cargo" />
 
     <EditText
         android:id="@+id/campoObervacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Detalle del cargo:" />
+        android:hint="Detalle cargo" />
 
 
     <Button
